[backend]: Add testing and update README

--- a/lvr-service/tsconfig.json
+++ b/lvr-service/tsconfig.json
@@ -8,9 +8,10 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "ES2020",
-    "outDir": "lib"
+    "outDir": "lib",
+    "types": ["jest", "node"]
   },
-  "include": ["src/**/*.ts", "serverless.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts", "serverless.ts"],
   "exclude": [
     "node_modules/**/*",
     ".serverless/**/*",
